# snake-game

./: .gitignore  README.md
src/: cabal.project  src.cabal
src/app/: Main.hs  Snake.hs
