cabal-version:      2.4
name:               src
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Saad Rehman
maintainer:         saad@dhcp-128-189-85-4.ubcsecure.wireless.ubc.ca

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable src
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Snake

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0, gloss==1.13.*, containers
    hs-source-dirs:   app
    default-language: Haskell2010
